test/Fail/Issue644.err
Issue644.agda:28.13-14: error: [UnequalTerms]
R !=< ((x : A) → P x)
when checking that the expression r has type (x : A) → P x
